--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Henry Zou Website",
+  "name": "henry-zou-website",
   "private": true,
   "description": "Henry Zou Website",
   "version": "0.1.0",
