--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "overrides": {
   "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
     "react": "^18.2.0"
+    }
   }
-}
 }
